 -- Fix srun tasks binding/allocation when using --ntasks-per-core option. Now,
    --ntasks-per-core=1 implies --cpu-bind=cores and --ntasks-per-core>1 implies
    --cpu-bind=threads.
 -- salloc/sbatch/srun check and abort if ntasks-per-core > threads-per-core.
 -- burst_buffer/lua - fix building heterogeneous job scripts where the
    directive is not the default "BB_LUA".

* Changes in Slurm 22.05.6
==========================
 -- Fix a partition's DisableRootJobs=no from preventing root jobs from working.
 -- Fix the number of allocated cpus for an auto-adjustment case in which the
    job requests --ntasks-per-node and --mem (per-node) but the limit is
    MaxMemPerCPU.
 -- Fix POWER_DOWN_FORCE request leaving node in completing state.
 -- Do not count magnetic reservation queue records towards backfill limits.
 -- Clarify error message when --send-libs=yes or BcastParameters=send_libs
    fails to identify shared library files, and avoid creating an empty
    "<filename>_libs" directory on the target filesystem.
 -- Fix missing CoreSpec on dynamic nodes upon slurmctld restart.
 -- Fix node state reporting when using specialized cores.
 -- Fix number of CPUs allocated if --cpus-per-gpu used.
 -- Add flag ignore_prefer_validation to not validate --prefer on a job.
 -- Fix salloc/sbatch SLURM_TASKS_PER_NODE output environment variable when the
    number of tasks is not requested.
 -- Permit using wildcard magic cookies with X11 forwarding.
 -- cgroup/v2 - Add check for swap when running OOM check after task
    termination.
 -- Fix deadlock caused by race condition when disabling power save with a
    reconfigure.
 -- Fix memory leak in the dbd when container is sent to the database.
 -- openapi/dbv0.0.38 - correct dbv0.0.38_tres_info.
 -- Fix node SuspendTime, SuspendTimeout, ResumeTimeout being updated after
    altering partition node lists with scontrol.
 -- jobcomp/elasticsearch - fix data_t memory leak after serialization.

* Changes in Slurm 22.05.5