@@ -1266,6 +1266,7 @@ extern void purge_node_rec(node_record_t *node_ptr)
 	xfree(node_ptr->part_pptr);
 	xfree(node_ptr->power);
 	xfree(node_ptr->reason);
+	xfree(node_ptr->resv_name);
 	xfree(node_ptr->version);
 	acct_gather_energy_destroy(node_ptr->energy);
 	ext_sensors_destroy(node_ptr->ext_sensors);
